<resources>
    <string name="app_name">TabsExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Hint-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confrim password</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_email">First name</string>

    <!--Button text-->
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
